# io

./: .appveyor.yml  .gitignore  .travis.yml  README.md  dub.sdl  file_hashes.json  index.html  meson.build  meson_options.txt  sitemap.xml  symbols.js  travis.sh
src/std/io/: exception.d  file.d  ops.d  package.d
src/std/io/driver/: package.d  sync.d
src/std/io/internal/: iovec.d  string.d
src/std/io/net/: addr.d  dns.d  package.d  socket.d  tcp.d  udp.d
std/: io.html
std/io/: IOInterfaces.html  IOObject.html  IOObject.io.html  IOObject.read.html  IOObject.this.html  IOObject.write.html  Input.html  Input.read.html  Output.html  Output.write.html  driver.html  exception.html  file.html  ioObject.html  isIO.html  isInput.html  isOutput.html  net.html
std/io/driver/: Driver.FILE.html  Driver.INVALID_FILE.html  Driver.INVALID_SOCKET.html  Driver.SOCKET.html  Driver.accept.html  Driver.bind.html  Driver.closeFile.html  Driver.closeSocket.html  Driver.connect.html  Driver.createFile.html  Driver.createSocket.html  Driver.fileFromHandle.html  Driver.getSocketOption.html  Driver.html  Driver.listen.html  Driver.localAddr.html  Driver.read.html  Driver.recv.html  Driver.recvFrom.html  Driver.resolve.html  Driver.seek.html  Driver.send.html  Driver.sendTo.html  Driver.setSocketOption.html  Driver.socketFromHandle.html  Driver.tchar.html  Driver.write.html  OpaqueHandle.html  driver.html  globalDriver.html  stderr.html  stdin.html  stdout.html  sync.html
std/io/driver/sync/: SyncDriver.html
std/io/exception/: ErrnoException.errno.html  ErrnoException.html  IOException.html
std/io/file/: File.close.html  File.html  File.isOpen.html  File.move.html  File.read.html  File.seek.html  File.this.html  File.write.html  Mode.html  Seek.html  mode.html
std/io/internal/: string.html
std/io/internal/string/: String.clone.html  String.empty.html  String.html  String.move.html  String.opCmp.html  String.opEquals.html  String.opOpAssign.html  String.opSlice.html  String.put.html  isStringLike.html
std/io/net/: addr.html  dns.html  socket.html  tcp.html  udp.html
std/io/net/addr/: AddrFamily.html  IPAddr.family.html  IPAddr.get.html  IPAddr.html  IPAddr.this.html  IPAddr.toString.html  IPv4Addr.any.html  IPv4Addr.html  IPv4Addr.parse.html  IPv4Addr.this.html  IPv4Addr.toString.html  IPv6Addr.any.html  IPv6Addr.html  IPv6Addr.parse.html  IPv6Addr.this.html  IPv6Addr.toString.html  SocketAddr.family.html  SocketAddr.get.html  SocketAddr.html  SocketAddr.opEquals.html  SocketAddr.this.html  SocketAddr.toString.html  SocketAddrIPv4.family.html  SocketAddrIPv4.html  SocketAddrIPv4.ip.html  SocketAddrIPv4.opEquals.html  SocketAddrIPv4.port.html  SocketAddrIPv4.this.html  SocketAddrIPv4.toString.html  SocketAddrIPv6.family.html  SocketAddrIPv6.flowinfo.html  SocketAddrIPv6.html  SocketAddrIPv6.ip.html  SocketAddrIPv6.opEquals.html  SocketAddrIPv6.port.html  SocketAddrIPv6.scopeId.html  SocketAddrIPv6.this.html  SocketAddrIPv6.toString.html  SocketAddrUnix.family.html  SocketAddrUnix.html  (+6 more)
std/io/net/dns/: AddrInfo.addr.html  AddrInfo.family.html  AddrInfo.html  AddrInfo.protocol.html  AddrInfo.socketType.html  DNSException.gaiError.html  DNSException.html
std/io/net/socket/: Protocol.html  ProtocolFamily.html  Socket.accept.html  Socket.bind.html  Socket.close.html  Socket.connect.html  Socket.getOption.html  Socket.html  Socket.isOpen.html  Socket.listen.html  Socket.localAddr.html  Socket.move.html  Socket.read.html  Socket.recv.html  Socket.recvFrom.html  Socket.send.html  Socket.sendTo.html  Socket.setOption.html  Socket.this.html  Socket.write.html  SocketOption.html  SocketOptionType.html  SocketType.html
std/io/net/tcp/: TCP.client.html  TCP.html  TCP.server.html  TCP.socket.html  TCPServer.Client.html  TCPServer.Client.remoteAddr.html  TCPServer.Client.tcp.html  TCPServer.accept.html  TCPServer.html  TCPServer.socket.html
std/io/net/udp/: UDP.client.html  UDP.html  UDP.move.html  UDP.server.html  UDP.socket.html  UDP.this.html
